Prevent lengthy clips overflowing the sidebar

--- a/src/flow.styl
+++ b/src/flow.styl
@@ -546,11 +546,13 @@ table
     background none
     padding 0
     margin 0
+    max-width 200px
+    overflow ellipsis
     &:hover
       color tomorrow-aqua
   .fa-play-circle:hover
     color tomorrow-aqua
-  .fa-play-trash:hover
+  .fa-play-trash-o:hover
     color red
 
 .twitter-typeahead
